Added another style file, will replace textfield with a box in next commit

--- a/src/css/chatWindow.css
+++ b/src/css/chatWindow.css
@@ -1,5 +1,12 @@
-.chatDiv {
+.outermostDiv {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.inputDiv {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
